--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -1,12 +1,11 @@
 # Mission // #001
-## Bug-Hunt
+## Trabsporting-Artifact
 # Goals
-- Stabilize the situation around Evergreen.
-- Track the raiders, figure out who they are.
+- Escort Quarkain out of the planet.
+- Track the pirates, figure out who they are.
   - Stop their attacks.
 
 # Stakes
-- Time is critical. Not acting will result in Evergreen losing contact with surrounding farmland, crippling any kind of expansion.
-
+- Time is critical. Any moment we delay our escape from this planet is a moment for them to reinforce their lockdown.
 # Reserves
 - None at this time.
