--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -1,5 +1,5 @@
 # Mission // #001
-## Trabsporting-Artifact
+## Trabsport-Artifact
 # Goals
 - Escort Quarkain out of the planet.
 - Track the pirates, figure out who they are.
