--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,14 +1,13 @@
 # Mission // #002
 ## Vigilant Gaze
 
-Patience puts the colony at its maximum security level and asks the squad to be on high alert. They are asked to stay around the colony while Evergreen scouts try to predict the movements of the Hercynian raiders.  
-Before anyone can gather more intel, a nighttime attack on the colony forces the team into action.
-
+The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact. We want you to intercept and retrieve it and pass it to us. Send a message to this OMNINET address, and we shall arrange a meeting point.
+# Client
+Anonymus 
 # Goals
-- Defend Evergreen and protect Evergreen’s reactor.
+- Attack Quarkain and retrieve his cargo of precious Precursior artifact
 
 # Stakes
-- If the mission is failed, Evergreen’s reactors will be destroyed, forcing the colony to use backup power, demolishing its defenses and its ability to function.
-
+- Time is limited, too slow and he will escape into space, rendering us incapable of catching up to him. This artifact is highly important and cannot fall in the wrong hands.  
 # Reserves
 - None at this time.
