--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,5 +1,5 @@
 # Mission // #002
-## Vigilant Gaze
+## Righteous-Owner
 
 The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact. We want you to intercept and retrieve it and pass it to us. Send a message to this OMNINET address, and we shall arrange a meeting point.
 # Client
