--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,7 +1,10 @@
 # Mission // #002
 ## Righteous-Owner
 
-The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact. We want you to intercept and retrieve it and pass it to us. Send a message to this OMNINET address, and we shall arrange a meeting point.
+The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact.
+- We want you to intercept and retrieve it and pass it to us.
+- Send a message to this OMNINET address, and we shall arrange a meeting point.
+
 # Client
 Anonymous 
 # Goals
