--- a/public/events/002.md
+++ b/public/events/002.md
@@ -1,1 +1,7 @@
+# Planet PRÁSINOS-4 // 2.21.5014u
+Four aspiring Lancers meet each others at a bar, where they become friends and establish a Mercenary Company of their own. They aimed to achieve fame and acquire richs, to become legends with legacies
 
+Their first mission was to escort a merchant, Quarkain so that he can deliver his goods safely offworld. A pirate attack of suspiciously large size interrupted that.
+Now, surrounded by danger, they have to escape the planet of PRÁSINOS-4 while being confronted by multiple mysteriesous enemies with no allies but each other. 
+
+The nature of the mysterious merchant and what he is transporting remain a mystery they dare not discover yet.
