--- a/public/events/002.md
+++ b/public/events/002.md
@@ -5,3 +5,5 @@ Their first mission was to escort a merchant, Quarkain so that he can deliver hi
 Now, surrounded by danger, they have to escape the planet of PRÁSINOS-4 while being confronted by multiple mysteriesous enemies with no allies but each other. 
 
 The nature of the mysterious merchant and what he is transporting remain a mystery they dare not discover yet.
+
+A mysterious message was sent to the OMNINET mail of their Mercenary Company. In it, is a Mission offered by a mysterious benefactor.
