--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -4,7 +4,9 @@
 - Escort Quarkain out of the planet.
 - Track the pirates, figure out who they are.
   - Stop their attacks.
-
+(There are radio static inteference in the area. Possiblities of Enemy Hackers: HIGH . Bring Nexus Weapon or Counter Hacker)
+# Client
+Quarkain
 # Stakes
 - Time is critical. Any moment we delay our escape from this planet is a moment for them to reinforce their lockdown.
 # Reserves
