Update and rename 002-2.md to 001-2.md

--- a/public/missions/001-2.md
+++ b/public/missions/001-2.md
@@ -1,4 +1,4 @@
-# Mission // #002
+# Mission // #001-2
 ## Righteous-Owner
 
 The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact.
