--- a/public/missions/001-3.md
+++ b/public/missions/001-3.md
@@ -1,5 +1,5 @@
 # Mission // #001.3
-# Brought to Justice
+# Brought-To-Justice
 "Wrecker", an infamous pirate is in the local location
 - Apprehend **"Wrecker"** **nonlethally** if possible, Union prefer to solve its problems peacefully. We belive everyone can be redeem
 - If not, dispose of him
