--- a/public/missions/001-3.md
+++ b/public/missions/001-3.md
@@ -1,4 +1,4 @@
-# Mission // #001.3
+# Mission // #001-3
 # Brought-To-Justice
 "Wrecker", an infamous pirate is in the local location
 - Apprehend **"Wrecker"** **nonlethally** if possible, Union prefer to solve its problems peacefully. We belive everyone can be redeem
