--- a/src/assets/missions/001-1.md
+++ b/src/assets/missions/001-1.md
@@ -1,5 +1,6 @@
+001-1 Transport-Artifact start
 # Mission // #001-1
-## Trabsport-Artifact
+## Transport-Artifact
 # Goals
 - Escort Quarkain out of the planet.
 - Track the pirates, figure out who they are.
