--- a/src/assets/missions/001-2.md
+++ b/src/assets/missions/001-2.md
@@ -1,5 +1,6 @@
+001-1 Rightful-Owner start
 # Mission // #001-2
-## Righteous-Owner
+## Rightful-Owner
 
 The mysterious merchant, Quarkain, is transporting a cargo of priceless Precursior artifact.
 - We want you to intercept and retrieve it and pass it to us.
