--- a/src/assets/missions/001-3.md
+++ b/src/assets/missions/001-3.md
@@ -1,6 +1,8 @@
-001-3 Brought-To-Justice start
+001-3 
+Brought-To-Justice 
+start
 # Mission // #001-3
-# Brought-To-Justice
+## Brought-To-Justice
 "Wrecker", an infamous pirate is in the local location
 - Apprehend **"Wrecker"** **nonlethally** if possible, Union prefer to solve its problems peacefully. We belive everyone can be redeem
 - If not, dispose of him
